--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "copy-paste": "^1.5.3",
     "esm": "^3.2.25",
     "papaparse": "^5.4.1"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.21.5"
   }
 }
